1999-09-17  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure.in, configure: Add a flag to force zlib installation.
  	First, we want to test this installation when the zip library is
 	already present on the system (skip this optimization). Second,
 	the system zip lib may be inconsistent with the glade one.

1999-09-07  Laurent Pautet  <pautet@scapin.enst.fr>

	* MANIFEST: Remove s-garloc.adb, s-garloc.ads, s-gartyp.adb and
	add s-gaprob.adb, s-gaprob.ads.

1999-08-22  Laurent Pautet  <pautet@scapin.enst.fr>

	* MANIFEST: Add usage.ad[bs] needed for makeusg.adb.

1999-06-30  Laurent Pautet  <pautet@scapin.enst.fr>

	* NEWS: Update with the new features and the bug fixes since
 	glade-3.11.

1999-06-02  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure.in: Sanity directory is now an env. variable instead
 	of a configuration option (in order to test with a binary
 	release).

1999-04-15  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Add Garlic/stamp-h.in to the distribution to avoid the 
	need for autoheader.

1999-04-12  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Add 5lgarcon.ads and 5sgarcon.ads.

	* configure.in: If the ZIP filter has been selected, check for the 
	presence of the zlib to determine whether it needs to be built or
	not.
	Updated for autoconf 1.3.

1999-02-16  Samuel Tardieu <sam@inf.enst.fr>

	* configure.in: Add a test for the string.h header file.

1999-02-07  Laurent Pautet  <pautet@scapin.enst.fr>

	* configure, configure.in, MANIFEST: Add Examples/Reconnection.

1999-01-11  Samuel Tardieu  <sam@inf.enst.fr>

	* Makefile.am: print a warning if the user is not using GNU make
	(consequence of bug 6108-G02).

1998-12-01  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Add support for i?86-*-mingw32* targets.

1998-10-26  Samuel Tardieu  <sam@inf.enst.fr>

	* MANIFEST: Add Garlic/5bgtplsp.ads to the distribution.

	* configure.in: Add support for AIX.

1998-10-26  Samuel Tardieu  <sam@inf.enst.fr>
