@@ -235,6 +235,7 @@ Garlic/s-gartcp.adb
 Garlic/s-gartcp.ads
 Garlic/s-garter.adb
 Garlic/s-garter.ads
+Garlic/s-garthi.adb
 Garlic/s-garthi.ads
 Garlic/s-gartra.adb
 Garlic/s-gartra.ads
